--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -38,71 +38,73 @@
 /* ==========
    公共样式
    ========== */
-body{
+body {
     background-color: #F2F3F4;
 }
 
 button {
-	background-color: #FFFFFF;
-	color: #000;
-	border:1px solid #CCCCCC;
+    background-color: #FFFFFF;
+    color: #000;
+    border: 1px solid #CCCCCC;
     outline: none;
-	border-radius:4px;
-	font-size: 12px;
-	cursor: pointer;
+    border-radius: 4px;
+    font-size: 12px;
+    cursor: pointer;
 }
 
-button.primary{
-	background-color: #1A8CFF;
+button.primary {
+    background-color: #1A8CFF;
     color: #FFFFFF;
     padding: 4px 12px;
     border: none;
     outline: none;
-    border-radius:4px;
+    border-radius: 4px;
     font-size: 14px;
     cursor: pointer;
 }
-.warning{
-	color: #FF701A;
+
+.warning {
+    color: #FF701A;
 }
 
 .yg-checkbox {
-	position: relative;
-	width: 20px;
-	height: 20px;
-	-webkit-appearance: none;
-	background-color: #fff;
-	border: 1px solid #999999;
-	border-radius: 2px;
+    position: relative;
+    width: 20px;
+    height: 20px;
+    -webkit-appearance: none;
+    background-color: #fff;
+    border: 1px solid #999999;
+    border-radius: 2px;
 
-	&::before {
-		content: "";
-		position: absolute;
-		left: 0;
-		top: 0;
-		border-top: 2px solid #f2f2f2;
-		border-left: 2px solid #f2f2f2;
-		width: 100%;
-		height: 100%;
-	}
-	&:checked,
-	&:focus {
-		border-color: #fe5803;
-		outline: none;
-	}
+    &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        border-top: 2px solid #f2f2f2;
+        border-left: 2px solid #f2f2f2;
+        width: 100%;
+        height: 100%;
+    }
 
-	&:checked::after {
-		content: '';
-		display: block;
-		height: 6px;
-		width: 10px;
-		border: 0 solid #fe5803;
-		border-width: 0 0 2px 2px;
-		transform: rotate(-45deg);
-		position: absolute;
-		top: 5px;
-		left: 4px;
-	}
+    &:checked,
+    &:focus {
+        border-color: #fe5803;
+        outline: none;
+    }
+
+    &:checked::after {
+        content: '';
+        display: block;
+        height: 6px;
+        width: 10px;
+        border: 0 solid #fe5803;
+        border-width: 0 0 2px 2px;
+        transform: rotate(-45deg);
+        position: absolute;
+        top: 5px;
+        left: 4px;
+    }
 }
 
 .container {
@@ -111,27 +113,33 @@ button.primary{
 
 header {
     background-color: #fff;
+
     .top {
         .container {
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
+
         line-height: 40px;
         height: 40px;
         background-color: #282928;
         color: rgba(255, 255, 255, 0.6);
+
         a {
             color: rgba(255, 255, 255, 0.6);
             font-size: 12px;
         }
+
         .left {
             display: flex;
             align-items: center;
+
             li {
                 display: flex;
                 align-items: center;
                 font-size: 12px;
+
                 &:before {
                     content: "";
                     display: block;
@@ -139,24 +147,27 @@ header {
                     height: 16px;
                     margin-right: 4px;
                     background-repeat: no-repeat;
-                    background-size: 16px;
-                    background-position: center;
+                    background-image: url(../img/headericonSprite.png);
                 }
+
                 &.szsy:before {
-                    background-image: url(../img/index/shouye-icon.png);
+                    background-position: -54px 0px;
                 }
+
                 &.scbz:before {
-                    background-image: url(../img/index/shoucang-icon.png);
+                    background-position: -21px -29px;
                 }
+
                 &.yyxz:before {
-                    background-image: url(../img/index/yuyan-icon.png);
+                    background-position: 0px -50px;
                 }
+
                 &.xz:before {
                     width: 24px;
                     height: 24px;
-                    background-size: 24px;
-                    background-image: url(../img/index/yonggaoxz.png);
+                    background-position: 0px 0px;
                 }
+
                 &.xz {
                     a {
                         display: flex;
@@ -168,92 +179,106 @@ header {
                         color: #1A8CFF;
                         border: 1px solid rgba(26, 140, 255, 0.6);
                         border-radius: 4px;
+
                         &:after {
                             content: "";
                             display: block;
                             width: 16px;
                             height: 16px;
+                            background-image: url(../img/headericonSprite.png);
                             background-repeat: no-repeat;
-                            background-size: 16px;
-                            background-position: center;
-                            background-image: url(../img/index/xiazai-icon.png);
+                            background-position: -54px -21px;
                             margin-left: 7px;
                         }
                     }
                 }
             }
+
             &>li:not(:last-child) {
                 margin-right: 20px;
             }
         }
+
         .right {
             li {
                 font-size: 12px;
                 float: left;
+
                 a {
                     display: inline-block;
                     line-height: 12px;
                     padding: 0 8px;
                     border-right: 1px solid rgba(255, 255, 255, 0.2);
-				}           
-				.info-num{
-					color: #A02F2F;
-				}
-            }
-            li:nth-last-child(2){            
-                a{
-					border-right: none;
-					padding-right: 0;
+                }
+
+                .info-num {
+                    color: #A02F2F;
                 }
             }
+
+            li:nth-last-child(2) {
+                a {
+                    border-right: none;
+                    padding-right: 0;
+                }
+            }
+
             .all-game-btn {
                 display: flex;
                 align-items: center;
                 margin-left: 16px;
-				padding: 0 13px;
-				background-color: #3C3D3C;
+                padding: 0 13px;
+                background-color: #3C3D3C;
+
                 a {
                     display: block;
                     line-height: 40px;
                 }
-                &:after{
+
+                &:after {
                     content: "";
                     display: block;
                     width: 8px;
                     height: 8px;
                     background-repeat: no-repeat;
-                    background-size: 8px;
-                    background-position: center;
-                    background-image: url(../img/index/xiangxia-icon.png);
+                    background-image: url(../img/headericonSprite.png);
+                    background-position: -40px -50px;
                     margin-left: 6px;
                 }
             }
         }
     }
+
     .main {
         width: 1200px;
         height: 84px;
         font-size: 14px;
         display: flex;
         align-items: center;
+
         .brand {
             margin-right: 18px;
         }
+
         ul {
             flex: 1;
             line-height: 84px;
+
             li {
                 float: left;
                 position: relative;
                 min-width: 84px;
                 text-align: center;
+
                 a {
                     color: #666666;
                 }
+
                 &.active a {
                     color: #333;
                     font-weight: bold;
                 }
+
                 &.active:after {
                     content: "";
                     position: absolute;
@@ -266,14 +291,17 @@ header {
                 }
             }
         }
+
         .search-wrap {
             width: 170px;
             display: flex;
+
             .input {
                 width: 136px;
-				border-radius:  4px 0px 0px 4px;
-				outline: none;
+                border-radius: 4px 0px 0px 4px;
+                outline: none;
             }
+
             .search-btn {
                 width: 34px;
                 height: 34px;
@@ -282,21 +310,23 @@ header {
                 background-image: url(../img/index/shousou-icon.png);
                 background-repeat: no-repeat;
                 background-size: 20px;
-				background-position: center;
-				cursor: pointer;
+                background-position: center;
+                cursor: pointer;
             }
-		}
-		.yg-title{
-			padding-left: 20px;
-			font-size: 18px;
-			color: #333333;
-			border-left: 1px solid #E6E6E6;
-			span{
-				display: block;
-				padding-bottom: 4px;
-				border-bottom: 3px solid #1A8CFF;
-			}
-		}
+        }
+
+        .yg-title {
+            padding-left: 20px;
+            font-size: 18px;
+            color: #333333;
+            border-left: 1px solid #E6E6E6;
+
+            span {
+                display: block;
+                padding-bottom: 4px;
+                border-bottom: 3px solid #1A8CFF;
+            }
+        }
     }
 }
 
@@ -304,18 +334,22 @@ footer {
     background-color: #282928;
     height: 340px;
     padding-top: 30px;
+
     .top {
         display: flex;
         padding-bottom: 23px;
         border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
         .left {
             width: 285px;
             color: #CCCCCC;
             font-size: 12px;
+
             .item {
                 display: flex;
                 align-items: center;
                 margin-bottom: 20px;
+
                 &:before {
                     content: "";
                     display: block;
@@ -323,31 +357,37 @@ footer {
                     height: 30px;
                     margin-right: 10px;
                     background-repeat: no-repeat;
-                    background-size: 30px;
-                    background-position: center;
+                    background-image: url("../img/footerSprite.png");
                 }
+
                 &.qq-icon:before {
-                    background-image: url(../img/index/kefuqq-icon.png);
+                    background-position: -110px -55px;
                 }
+
                 &.tel-icon:before {
-                    background-image: url(../img/index/rexiandianhua-icon.png);
+                    background-position: -35px -110px;
                 }
+
                 &.email-icon:before {
-                    background-image: url(../img/index/tousuyouxiang-icon.png);
+                    background-position: 0px -110px;
                 }
             }
         }
+
         .right {
             padding-top: 7px;
             font-size: 12px;
             color: #666666;
+
             .list {
                 display: flex;
                 margin-bottom: 19px;
+
                 li {
                     margin-right: 18px;
                 }
             }
+
             .img {
                 width: 866px;
                 height: 40px;
@@ -358,9 +398,11 @@ footer {
             }
         }
     }
+
     .bottom {
         display: flex;
         padding-top: 30px;
+
         .left {
             width: 265px;
             height: 64px;
@@ -369,6 +411,7 @@ footer {
             background-size: 196px 46px;
             background-position: left center;
         }
+
         .center {
             width: 570px;
             padding: 0 20px;
@@ -376,41 +419,51 @@ footer {
             border-right: 1px solid rgba(255, 255, 255, 0.1);
             font-size: 12px;
             color: #666666;
+
             .list {
                 display: flex;
                 margin-bottom: 20px;
+
                 li {
                     padding-left: 9px;
                     line-height: 12px;
                     margin-right: 9px;
                     border-left: 1px solid #666;
+
                     &:first-child {
                         padding-left: 0;
                         border-left: none;
                     }
                 }
             }
+
             .tip {
                 margin-bottom: 10px;
             }
         }
+
         .right {
             flex: 1;
             padding-left: 20px;
+
             .list {
                 display: flex;
+
                 .item {
                     margin-right: 25px;
+
                     .text {
                         margin-bottom: 8px;
                         ;
                         color: #CCCCCC;
                         font-size: 12px;
                     }
+
                     .sub-text {
                         color: #666666;
                         font-size: 10px;
                     }
+
                     &:before {
                         content: "";
                         display: block;
@@ -418,19 +471,22 @@ footer {
                         height: 26px;
                         margin-bottom: 8px;
                         background-repeat: no-repeat;
-                        background-size: 26px;
-                        background-position: center;
+                        background-image: url("../img/footerSprite.png")
                     }
+
                     &.bz:before {
-                        background-image: url(../img/index/jishu-icon.png);
+                        background-position: -70px -110px;
                     }
+
                     &.fw:before {
-                        background-image: url(../img/index/chanpinfuwu-icon.png);
+                        background-position: -132px -110px;
                     }
+
                     &.qk:before {
-                        background-image: url(../img/index/gaoxiao-icon.png);
+                        background-position: -101px -110px;
                     }
                 }
+
                 .item:last-child {
                     margin-right: 0;
                 }
@@ -439,14 +495,15 @@ footer {
     }
 }
 
-.site-tool-wrap{
+.site-tool-wrap {
     position: fixed;
     z-index: 99;
     right: 0;
     bottom: 5px;
     width: 50px;
-    .tool-group{
-        li{
+
+    .tool-group {
+        li {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -458,49 +515,60 @@ footer {
             background-color: rgb(110, 110, 110);
             color: rgb(209, 209, 209);
             background-repeat: no-repeat;
-            background-size: cover;
-            background-position: 100%;
+            background-image: url("../img/footerSprite.png");
             border-radius: 4px;
             overflow: hidden;
-            &:hover{
+
+            &:hover {
                 background-image: none;
-                a,.to-top{
+
+                a,
+                .to-top {
                     display: block;
                 }
             }
-            &:last-of-type{
+
+            &:last-of-type {
                 margin-bottom: 0;
             }
-            a,.to-top{
+
+            a,
+            .to-top {
                 cursor: pointer;
                 display: none;
             }
         }
-        .sw{
-            background-image: url('../img/index/mianfeishiwan-default.png');
+
+        .sw {
+            background-position: -55px -55px;
         }
-        .qq{
-            background-image: url('../img/index/qqkefu-default.png')
+
+        .qq {
+            background-position: -110px 0px;
         }
-        .zx{
-            background-image: url('../img/index/zaixiankefu-default.png')
+
+        .zx {
+            background-position: 0px 0px;
         }
-        .dh{
-            background-image: url('../img/index/dianhua -default.png')
+
+        .dh {
+            background-position: 0px -55px;
         }
-        .db{
-            background-image: url('../img/index/dingbu-default.png')
+
+        .db {
+            background-position: -55px 0px;
         }
     }
 }
 
-.sidebar{
+.sidebar {
     width: 210px;
     margin-right: 20px;
     padding-top: 30px;
     background-color: #fff;
-    border-radius:4px;
-    .item{
+    border-radius: 4px;
+
+    .item {
         line-height: 40px;
         height: 40px;
         margin-bottom: 15px;
@@ -508,40 +576,79 @@ footer {
         color: #333333;
         font-weight: 400;
         padding-left: 50px;
-        a{
+
+        a {
             display: flex;
             align-items: center;
         }
-        .icon{
+
+        .icon {
             display: inline-block;
             width: 20px;
             height: 20px;
-			margin-right: 9px;
-			background-repeat: no-repeat;
+            margin-right: 9px;
+            background-repeat: no-repeat;
         }
-        &:last-of-type{
+
+        &:last-of-type {
             margin-bottom: 0;
         }
-        &.active{
-			padding-left: 47px;
+
+        &.active {
+            padding-left: 47px;
             background-color: #FAFAFB;
             color: #FF701A;
             border-left: 3px solid #1A8CFF;
-		}
-		&:hover{
-			background-color: #FAFAFB;
+        }
+
+        &:hover {
+            background-color: #FAFAFB;
             color: #FF701A;
-		}
+        }
     }
 }
 
-.customer-service button.service-btn{
-	display: block;
-	width:106px;
-	height:36px;
-	margin: 0 auto;
-	&:first-of-type{
-		margin-top: 67px; 
-		margin-bottom: 10px;
-	}
+
+.yg-modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    background-color: rgba(0, 0, 0, 0.8);
+
+    .modal-dialog {
+        position: relative;
+        width: 400px;
+        height: 326px;
+        top: 10%;
+        left: 0;
+        right: 0;
+        background: #fff;
+        border-radius: 4px;
+        margin: 0 auto;
+        padding-top: 38px;
+
+        .modal-content {
+            width: 264px;
+            margin: 0 auto;
+
+            .modal-header {
+                margin-bottom: 20px;
+                font-weight: bold;
+                .close {
+                    position: absolute;
+                    top: 20px;
+                    right: 16px;
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    background: url("../img/guanbi-icon.png") no-repeat;
+                    background-size: contain;
+                    border: none;
+                }
+            }
+        }
+    }
 }
