--- a/src/include/header.html
+++ b/src/include/header.html
@@ -8,12 +8,29 @@
 				<li class="xz"><a href="#">永高APP下载</a></li>
 			</ul>
 			<ul class="right">
-				<li><a href="#">登录</a></li>
-				<li><a href="#">注册</a></li>
+				<li class="login-btn"><a href="javascript:void(0)">登录</a></li>
+				<li class="regist-btn"><a href="javascript:void(0)">注册</a></li>
 				<li><a href="customerService.html">客服中心</a></li>
 				<li><a href="#">免费试玩</a></li>
 				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
 			</ul>
+
+			<div class="header-info">
+				<div class="cont">
+					<i class="info-icon"></i>
+					<div class="text-wrap">
+						<div class="info-tit">
+							<span class="tit">系统消息</span><span class="time">2019年01月07日</span>
+						</div>
+						<p class="text">
+							永高娱乐，APP安卓，ios系统全新上线啦新用户，百元大礼包等你来领，马上去下载
+							<a href="#">详情>></a>
+						</p>
+					</div>
+				</div>
+				<div class="all-info"><a href="">查看所有消息>></a></div>
+			</div>
+
 		</div>
 	</nav>
 	<!-- 登陆后navtop -->
