--- a/src/include/custServerSidebar.html
+++ b/src/include/custServerSidebar.html
@@ -1,18 +1,18 @@
 <ul class="sidebar">
 	<li class="item active">
-		<a href="customerService.html"><i class="icon"></i>密码申诉</a>
+		<a href="customerService.html"><i class="icon mmss"></i>密码申诉</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>账号申诉</a>
+		<a href=""><i class="icon zhss"></i>账号申诉</a>
 	</li>
 	<li class="item">
-		<a href="helpRecharge.html"><i class="icon"></i>充值帮助</a>
+		<a href="helpRecharge.html"><i class="icon czbz"></i>充值帮助</a>
 	</li>
 	<li class="item">
-		<a href="helpWithdraw.html"><i class="icon"></i>提现帮助</a>
+		<a href="helpWithdraw.html"><i class="icon txbz"></i>提现帮助</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>用户协议</a>
+		<a href=""><i class="icon yhxy"></i>用户协议</a>
 	</li>
 	<button class="service-btn"><a href="">在线客服</a></button>	
 	<button class="service-btn"><a href="">QQ客服</a></button>
