--- a/src/include/header.html
+++ b/src/include/header.html
@@ -1,75 +1,112 @@
 <header>
-	<nav class="top">
-		<div class="container center-block">
-			<ul class="left">
-				<li class="szsy"><a href="#">设为首页</a></li>
-				<li class="scbz"><a href="#">收藏本站</a></li>
-				<li class="yyxz"><a href="#">语言选择</a></li>
-				<li class="xz"><a href="#">永高APP下载</a></li>
-			</ul>
-			<ul class="right">
-				<li class="login-btn"><a href="javascript:void(0)">登录</a></li>
-				<li class="regist-btn"><a href="javascript:void(0)">注册</a></li>
-				<li><a href="customerService.html">客服中心</a></li>
-				<li><a href="#">免费试玩</a></li>
-				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
-			</ul>
+    <nav class="top">
+        <div class="container center-block">
+            <ul class="left">
+                <li class="szsy"><a href="#">设为首页</a></li>
+                <li class="scbz"><a href="#">收藏本站</a></li>
+                <li class="yyxz"><a href="#">语言选择</a></li>
+                <li class="xz"><a href="#">永高APP下载</a></li>
+            </ul>
+            <ul class="right">
+                <li class="login-btn"><a href="javascript:void(0)">登录</a></li>
+                <li class="regist-btn"><a href="javascript:void(0)">注册</a></li>
+                <li><a href="customerService.html">客服中心</a></li>
+                <li><a href="#">免费试玩</a></li>
+                <div class="all-game-btn pull-left">
+                    <a class="btn-text" href="javascript:void(0)">所有游戏</a>
+                    <div class="all-game-box">
+                        <div class="all-game-header">
+                            <span class="text">推荐游戏</span>
+                            <a class="more-game" href="#">更多 ></a>
+                        </div>
+                        <div class="all-game-list">
+                            <span class="all-game-item"><a href="">百家乐 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">三公</a></span>
+                            <span class="all-game-item"><a href="">牛牛 </a></span>
+                            <span class="all-game-item"><a href="">真人视讯 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">竞技赛车<i class="new-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">桌球</a></span>
+                            <span class="all-game-item"><a href="">大转盘</a></span>
+                            <span class="all-game-item"><a href="">娱乐</a></span>
+                        </div>
+                    </div>
+                </div>
+            </ul>
 
-			<div class="header-info">
-				<div class="cont">
-					<i class="info-icon"></i>
-					<div class="text-wrap">
-						<div class="info-tit">
-							<span class="tit">系统消息</span><span class="time">2019年01月07日</span>
-						</div>
-						<p class="text">
-							永高娱乐，APP安卓，ios系统全新上线啦新用户，百元大礼包等你来领，马上去下载
-							<a href="#">详情>></a>
-						</p>
-					</div>
-				</div>
-				<div class="all-info"><a href="">查看所有消息>></a></div>
-			</div>
+        </div>
+    </nav>
+    <!-- 登陆后navtop -->
+    <!-- <nav class="top">
+        <div class="container center-block">
+            <ul class="left">
+                <li class="szsy"><a href="#">设为首页</a></li>
+                <li class="scbz"><a href="#">收藏本站</a></li>
+                <li class="yyxz"><a href="#">语言选择</a></li>
+                <li class="xz"><a href="#">永高APP下载</a></li>
+            </ul>
+            <ul class="right">
+                <li><a href="#">账号：18848614754</a></li>
+                <li><a href="#">注销</a></li>
+                <li><a href="customerService.html">客服中心</a></li>
+                <li class="info-btn">
+                    <a href="javascript:void(0)">消息<span class="info-num">(10)</span></a>
+                    <div class="header-info">
+                        <div class="cont">
+                            <i class="info-icon"></i>
+                            <div class="text-wrap">
+                                <div class="info-tit">
+                                    <span class="tit">系统消息</span><span class="time">2019年01月07日</span>
+                                </div>
+                                <p class="text">
+                                    永高娱乐，APP安卓，ios系统全新上线啦新用户，百元大礼包等你来领，马上去下载
+                                    <a href="#">详情>></a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="all-info"><a href="">查看所有消息>></a></div>
+                    </div>
+                </li>
+                <div class="all-game-btn pull-left">
+                    <a class="btn-text" href="javascript:void(0)">所有游戏</a>
+                    <div class="all-game-box">
+                        <div class="all-game-header">
+                            <span class="text">推荐游戏</span>
+                            <a class="more-game" href="#">更多 ></a>
+                        </div>
+                        <div class="all-game-list">
+                            <span class="all-game-item"><a href="">百家乐 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">三公</a></span>
+                            <span class="all-game-item"><a href="">牛牛 </a></span>
+                            <span class="all-game-item"><a href="">真人视讯 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">竞技赛车<i class="new-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">桌球</a></span>
+                            <span class="all-game-item"><a href="">大转盘</a></span>
+                            <span class="all-game-item"><a href="">娱乐</a></span>
+                        </div>
+                    </div>
+                </div>
+            </ul>
+        </div>
+    </nav> -->
+    <!-- 登陆后navtop END -->
 
-		</div>
-	</nav>
-	<!-- 登陆后navtop -->
-	<!-- <nav class="top">
-		<div class="container center-block">
-			<ul class="left">
-				<li class="szsy"><a href="#">设为首页</a></li>
-				<li class="scbz"><a href="#">收藏本站</a></li>
-				<li class="yyxz"><a href="#">语言选择</a></li>
-				<li class="xz"><a href="#">永高APP下载</a></li>
-			</ul>
-			<ul class="right">
-				<li><a href="#">账号：18848614754</a></li>
-				<li><a href="#">注销</a></li>
-				<li><a href="customerService.html">客服中心</a></li>
-				<li><a href="#">消息<span class="info-num">(10)</span></a></li>
-				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
-			</ul>
-		</div>
-	</nav> -->
-	<!-- 登陆后navtop END -->
+    <nav class="main center-block">
+        <div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
+        <ul>
+            <li class="active"><a href="index.html">首页</a></li>
+            <li><a href="#">真人视讯</a></li>
+            <li><a href="#">体育赛事</a></li>
+            <li><a href="#">彩票游戏</a></li>
+            <li><a href="#">电子游艺</a></li>
+            <li><a href="#">优惠活动</a></li>
+            <li><a href="centerWallet.html">我的钱包</a></li>
+            <li><a href="userCenter.html">用户中心</a></li>
+            <li><a href="registAgent.html">代理注册</a></li>
+        </ul>
 
-	<nav class="main center-block">
-		<div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
-		<ul>
-			<li class="active"><a href="index.html">首页</a></li>
-			<li><a href="#">真人视讯</a></li>
-			<li><a href="#">体育赛事</a></li>
-			<li><a href="#">彩票游戏</a></li>
-			<li><a href="#">电子游艺</a></li>
-			<li><a href="#">优惠活动</a></li>
-			<li><a href="centerWallet.html">我的钱包</a></li>
-			<li><a href="userCenter.html">用户中心</a></li>
-			<li><a href="registAgent.html">代理注册</a></li>
-		</ul>
-
-		<div class="search-wrap">
-			<input class="input" type="input" placeholder="搜索你喜欢的游戏">
-			<div class="search-btn"></div>
-		</div>
-	</nav>
+        <div class="search-wrap">
+            <input class="input" type="input" placeholder="搜索你喜欢的游戏">
+            <div class="search-btn"></div>
+        </div>
+    </nav>
 </header>
