--- a/src/include/header2.html
+++ b/src/include/header2.html
@@ -12,7 +12,25 @@
 				<li><a href="#">注册</a></li>
 				<li><a href="customerService.html">客服中心</a></li>
 				<li><a href="#">免费试玩</a></li>
-				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
+				<div class="all-game-btn pull-left">
+                    <a class="btn-text" href="javascript:void(0)">所有游戏</a>
+                    <div class="all-game-box">
+                        <div class="all-game-header">
+                            <span class="text">推荐游戏</span>
+                            <a class="more-game" href="#">更多 ></a>
+                        </div>
+                        <div class="all-game-list">
+                            <span class="all-game-item"><a href="">百家乐 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">三公</a></span>
+                            <span class="all-game-item"><a href="">牛牛 </a></span>
+                            <span class="all-game-item"><a href="">真人视讯 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">竞技赛车<i class="new-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">桌球</a></span>
+                            <span class="all-game-item"><a href="">大转盘</a></span>
+                            <span class="all-game-item"><a href="">娱乐</a></span>
+                        </div>
+                    </div>
+                </div>
 			</ul>
 		</div>
 	</nav>
@@ -30,8 +48,43 @@
 				<li><a href="#">账号：18848614754</a></li>
 				<li><a href="#">注销</a></li>
 				<li><a href="customerService.html">客服中心</a></li>
-				<li><a href="#">消息<span class="info-num">(10)</span></a></li>
-				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
+				<li class="info-btn">
+                    <a href="javascript:void(0)">消息<span class="info-num">(10)</span></a>
+                    <div class="header-info">
+                        <div class="cont">
+                            <i class="info-icon"></i>
+                            <div class="text-wrap">
+                                <div class="info-tit">
+                                    <span class="tit">系统消息</span><span class="time">2019年01月07日</span>
+                                </div>
+                                <p class="text">
+                                    永高娱乐，APP安卓，ios系统全新上线啦新用户，百元大礼包等你来领，马上去下载
+                                    <a href="#">详情>></a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="all-info"><a href="">查看所有消息>></a></div>
+                    </div>
+                </li>
+				<div class="all-game-btn pull-left">
+                    <a class="btn-text" href="javascript:void(0)">所有游戏</a>
+                    <div class="all-game-box">
+                        <div class="all-game-header">
+                            <span class="text">推荐游戏</span>
+                            <a class="more-game" href="#">更多 ></a>
+                        </div>
+                        <div class="all-game-list">
+                            <span class="all-game-item"><a href="">百家乐 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">三公</a></span>
+                            <span class="all-game-item"><a href="">牛牛 </a></span>
+                            <span class="all-game-item"><a href="">真人视讯 <i class="hot-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">竞技赛车<i class="new-icon"></i></a></span>
+                            <span class="all-game-item"><a href="">桌球</a></span>
+                            <span class="all-game-item"><a href="">大转盘</a></span>
+                            <span class="all-game-item"><a href="">娱乐</a></span>
+                        </div>
+                    </div>
+                </div>
 			</ul>
 		</div>
 	</nav> -->
